syntax = "proto3";
package m;

option java_multiple_files = true;
option java_package = "org.study.boychat.data";

message Message {
    int32 magicNumber = 1;
    int32 version = 2;
    int32 type = 3;
    int32 length = 4;
    bytes body = 5;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    string token = 2;
}

message MessageRequest {
    string message = 1;
    string srcEmail = 2;
    string desEmail = 3;
}

message MessageResponse {
    string message = 1;
    string srcEmail = 2;
    string desEmail = 3;
}